@@ -370,7 +370,7 @@ For the JTAG ICE mkII, if
 has been configured with libusb support,
 .Ar port
 can alternatively be specified as
-.Ar usb Ns Op \&: Ns Ar serialno .
+.Pa usb Ns Op \&: Ns Ar serialno .
 This will cause
 .Nm
 to search a JTAG ICE mkII on USB.
@@ -384,6 +384,25 @@ from the serial number need to be given.
 .Pp
 As the AVRISP mkII device can only be talked to over USB, the very
 same method of specifying the port is required there.
+.Pp
+For programmers that attach to a serial port using some kind of
+higher level protocol (as opposed to bit-bang style programmers),
+.Ar port
+can be specified as
+.Pa net Ns \&: Ns Ar host Ns \&: Ns Ar port .
+In this case, instead of trying to open a local device, a TCP
+network connection to (TCP)
+.Ar port
+on
+.Ar host
+is established.
+The remote endpoint is assumed to be a terminal or console server
+that connects the network stream to a local serial port where the
+actual programmer has been attached to.
+The port is assumed to be properly configured, for example using a
+transparent 8-bit data connection without parity at 115200 Baud
+for a STK500.
+.Em This feature is currently not implemented for Win32 systems.
 .It Fl q
 Disable (or quell) output of the progress bar while reading or writing
 to the device.  Specify it a second time for even quieter operation.
